style(search): ensure search bar fits properly on mobile.

--- a/src/presentation/components/search/search-input/search-input.scss
+++ b/src/presentation/components/search/search-input/search-input.scss
@@ -4,7 +4,7 @@
 	display: inline-block;
 	position: relative;
 	width: 24rem;
-	max-width: calc(100% - 4rem);
+	max-width: calc(100% - 5rem);
 	margin-left: 1rem;
 
 	.SearchBar {
@@ -36,7 +36,7 @@
 #SearchInput {
 	background: transparent;
 	border: none;
-	font-size: 16px;
+	font-size: 13px;
 	width: calc(100% - 2rem);
 	margin-left: 0.5rem;
 	color: $White;
@@ -44,5 +44,11 @@
 	&::placeholder {
 		color: $White;
 		opacity: 0.7;
+	}
+}
+
+@media (min-width: 768px) {
+	#SearchInput {
+		font-size: 16px;
 	}
 }
